# LuxRestore-AI

./: .gitattributes  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/benchmark/: runner.py  schemas.py
app/config/: logger.py  settings.py
app/decision/: engine.py  factory.py  interfaces.py  service.py
app/inpainter/: factory.py  mock.py  service.py
app/interfaces/: inpainter.py  locator.py  mask.py  quality.py
app/locator/: factory.py  mock.py  service.py
app/mask/: factory.py  mock.py  service.py
app/metrics/: factory.py  interfaces.py  metrics.py  schemas.py  service.py
app/pipeline/: orchestrator.py
app/preprocessing/: factory.py  interfaces.py  loader.py  normalizer.py  schemas.py  service.py  validator.py
app/providers/: __init__.py  registry.py
app/quality/: factory.py  mock.py  service.py
app/schemas/: enums.py  pipeline.py  provider.py
docs/: CHANGELOG.md  DEPLOYMENT.md  INSTALLATION.md  MODELS.md  PROJECT_STATE.md  ROADMAP.md  TROUBLESHOOTING.md  architecture.md  technology-validation.md
luxrestore_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
playground/: 01_locator_test.py  02_mask_test.py  03_inpaint_test.py  04_pipeline_test.py  requirements.txt
playground/grounding_dino/: README.md  __init__.py  adapter.py  config.py  loader.py  locator.py  model_manager.py  postprocess.py  prompt_experiment.py  run.py  runner.py  utils.py  visualizer.py
tests/: test_benchmark.py  test_factories.py  test_main.py  test_pipeline.py  test_providers.py  test_schemas.py
weights/: .gitignore
(+19 files in other folders)
